--- a/style.css
+++ b/style.css
@@ -14,19 +14,27 @@ h1{
     color: blanchedalmond;
     background-color: blue;
     cursor: pointer;
-    height: 250px;
-    width: 200px;
-    margin-top: 150px;
+    height: auto;
+    width: auto;
     font-size: 5em;
+    z-index: 500;
+}
+.newMeal button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 button:hover{
     background-color: bisque;
 }
 button{
-    height: 50px;
-    width: 45px;
+    height: auto;
+    width: auto;
     background-color: rgb(238, 80, 6);
     color: white;
+    font-size: 1em;
 }
 .h1container{
     left:50%;
@@ -94,3 +102,4 @@ span{
 #mainMeal{
     top: 30%;
 }
+
