--- a/style.css
+++ b/style.css
@@ -9,15 +9,19 @@ h1{
     font-size: 90px;
     color: white;
 }
-#newMeal{
+#newMeal {
     border-color: aliceblue;
     color: blanchedalmond;
     background-color: blue;
     cursor: pointer;
-    height: auto;
-    width: auto;
-    font-size: 5em;
+    font-size: 3em; /* Adjust font size for mobile */
     z-index: 500;
+    margin-top: 10%;
+    width: 50%; /* Full width on mobile */
+    max-width: 100%; /* Ensure it doesn't overflow */
+    box-sizing: border-box; /* Include padding and border in width calculation */
+    padding: 10px; /* Add some padding for better mobile experience */
+    text-align: center; /* Center the content */
 }
 .newMeal button {
     position: absolute;
@@ -58,7 +62,7 @@ table{
 }
 .centered-table {
     left: 70%;
-    top: 200px;
+    top: 10%;
     position: absolute;
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
@@ -66,6 +70,8 @@ table{
     margin: 0 auto;
     border: 1px solid black; 
 }
+
+
 .spec{
     width: 400px;
 }
@@ -102,4 +108,3 @@ span{
 #mainMeal{
     top: 30%;
 }
-
